--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -24,7 +24,7 @@ main.home {
             margin-top: 6.875rem;
             margin-right: 8.75rem;
             align-self: center;
-            // background: $color-3;
+            background: $color-3;
             border-radius: 50%;
             
             &::before{
